[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgal"
dynamic = ["version"]
authors = [
    { name = "CGAL Project" }
]
description = "CGAL bindings, allowing to use some of the CGAL library in Python."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/CGAL/cgal-swig-bindings"

[project.optional-dependencies]
main = ["numpy"]
