cmake_minimum_required(VERSION 2.8)

PROJECT(CGAL-bindings)

if(POLICY CMP0017)
# New policy in cmake-2.8.3
  cmake_policy(SET CMP0017 NEW)
endif()

include(cmake/Modules/SWIG_CGAL_Macros.cmake)

find_package(CGAL QUIET COMPONENTS ImageIO)
find_package(SWIG REQUIRED)
option( BUILD_PYTHON "Build python bindings" ON )
option( BUILD_JAVA "Build java bindings" ON )

#include_directories(BEFORE include)

if ( CGAL_FOUND )
  include( ${CGAL_USE_FILE} )
  
  if (${CMAKE_BUILD_TYPE} STREQUAL Release)
    message ("Relase mode: using -fno-strict-aliasing flags")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-strict-aliasing")
  endif()
  
  if (SWIG_FOUND)
    SET (UseSWIG ON)
    INCLUDE(${SWIG_USE_FILE})  

    SET(CMAKE_SWIG_FLAGS "-I${CMAKE_CURRENT_SOURCE_DIR}/..")
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)

    if (${BUILD_PYTHON})
      FIND_PACKAGE(PythonLibs)
    endif()
    if (${BUILD_JAVA})
      FIND_PACKAGE(JNI)
    endif()
    
    if (PYTHONLIBS_FOUND)
      SET (PYTHONBUILDPATH "${CMAKE_CURRENT_BINARY_DIR}/build-python" CACHE PATH "Path where the CGAL directory containing python bindings will be generated.")
      configure_file(files/__init__.py "${PYTHONBUILDPATH}/CGAL/__init__.py"  COPYONLY)
      LINK_DIRECTORIES("${PYTHONBUILDPATH}/CGAL")
      MESSAGE("Found Python libs.")
      MESSAGE("CGAL-SWIG Python libs will be written in ${PYTHONBUILDPATH}/CGAL.")
    endif()
    if (JAVA_INCLUDE_PATH)
      SET (JAVABUILDPATHPREFIX "${CMAKE_CURRENT_BINARY_DIR}/build-java/" CACHE PATH "Path where java bindings will be generated. Java files in CGAL directory, libraries in lib directory.")
      SET (JAVALIBPATH "${JAVABUILDPATHPREFIX}/lib")
      MESSAGE("Found JNI: JNI include dirs ${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2}.")
      MESSAGE("CGAL-SWIG Java libs will be written in ${JAVALIBPATH}.")
      MESSAGE("CGAL-SWIG Java files will be written in ${JAVABUILDPATHPREFIX}/CGAL.")
    endif()

    add_subdirectory(Kernel)
    add_subdirectory(Java)
    add_subdirectory(Triangulation_3)
    add_subdirectory(Triangulation_2)
    add_subdirectory(Polyhedron_3)
    add_subdirectory(Alpha_shape_2)
    add_subdirectory(Spatial_searching)
    add_subdirectory(AABB_tree)
    add_subdirectory(Surface_mesher)
    add_subdirectory(Mesh_3)
    add_subdirectory(Mesh_2)
    add_subdirectory(Interpolation)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/User_packages/CMakeLists.txt")
      MESSAGE("Found User_packages/CMakeLists.txt, user packages will be built.")
      add_subdirectory(User_packages)
    endif()
  else()
    message(STATUS "NOTICE: CGAL-bindings requires the SWIG include files and binary program, and will not be compiled.")
  endif()
else()
    message(STATUS "NOTICE: CGAL-bindings requires the CGAL library, and will not be compiled.")
endif()
